minor fixes + create layout

--- a/iziozi/src/main/res/layout/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout/create_button_activity_layout.xml
@@ -21,8 +21,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="215dp"
-        android:background="@android:color/holo_blue_bright"
+        android:layout_height="wrap_content"
         android:gravity="bottom"
         android:orientation="vertical" >
 
@@ -67,20 +66,14 @@
             </EditText>
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@android:color/holo_green_light" >
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:text="Preview area position" />
-
-        </RelativeLayout>
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salva"
+        android:id="@+id/button"
+        android:layout_gravity="center_horizontal"
+        android:onClick="doSave" />
 
 </LinearLayout>
