--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -1,10 +1,24 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="@string/action_settings"/>
-    <item android:id="@+id/editMode" android:visible="true" android:orderInCategory="10" android:checked="false" android:enabled="true" android:checkable="true" android:title="@string/edit_string"></item>
+        android:title="@string/action_settings" />
+
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="2"
+        android:showAsAction="never"
+        android:title="@string/save" />
+
+    <item
+        android:id="@+id/editMode"
+        android:checkable="true"
+        android:checked="false"
+        android:enabled="true"
+        android:orderInCategory="1"
+        android:title="@string/edit_mode"
+        android:visible="true"></item>
 
 </menu>
