--- a/iziozi/src/main/res/layout/spkbtn_input_layout.xml
+++ b/iziozi/src/main/res/layout/spkbtn_input_layout.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
-        android:text="Inserire il testo da pronunciare:"
+        android:text="@string/btn_inserttext"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
