--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/action_settings"
         android:orderInCategory="2"
         android:showAsAction="never"
-        android:title="@string/action_settings" />
+        android:title="@string/settings" />
 
     <item
         android:id="@+id/action_save"
