--- a/iziozi/src/main/res/layout/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout/create_button_activity_layout.xml
@@ -1,4 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2014 Martino Lessio -
+  ~ www.martinolessio.com
+  ~ martino [at] iziozi [dot] org
+  ~
+  ~
+  ~ This file is part of the IziOzi project.
+  ~
+  ~ IziOzi is free software:
+  ~ you can redistribute it and/or modify it under the terms of the GNU General Public
+  ~ License as published by the Free Software Foundation, either version 3 of the License,
+  ~ or (at your option) any later version.
+  ~
+  ~ IziOzi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
+  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+  ~ See the GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License along with IziOzi.
+  ~ If not, see http://www.gnu.org/licenses/.
+  -->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -31,8 +52,7 @@
             android:layout_height="match_parent"
             android:background="@null"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/create_preview_label"
-            android:onClick="doTapOnImage" />
+            android:layout_below="@+id/create_preview_label" />
 
 
 
@@ -41,7 +61,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/tap_for_image"
-            android:id="@+id/create_tap_label"
+            android:id="@+id/CreateButtonTapLabel"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
     </RelativeLayout>
