--- a/iziozi/src/main/res/layout/image_grid_cell.xml
+++ b/iziozi/src/main/res/layout/image_grid_cell.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2014 Martino Lessio -
   ~ www.martinolessio.com
@@ -19,12 +21,15 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="it.smdevelopment.iziozi.gui.SMImagesSearchActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
-</menu>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="@dimen/image_search_size"
+    android:layout_height="@dimen/image_search_size">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ImageSearchCellImageView"
+        android:layout_gravity="center"
+        android:src="@drawable/btn_normal" />
+</LinearLayout>
