Alpha release v 0.1 build 20140512

--- a/iziozi/src/main/res/layout/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout/create_button_activity_layout.xml
@@ -54,7 +54,8 @@
             android:background="@null"
             android:layout_centerHorizontal="true"
             android:layout_below="@+id/create_preview_label"
-            android:onClick="doTapOnImage" />
+            android:onClick="doTapOnImage"
+            android:scaleType="centerInside" />
 
 
 
