--- a/iziozi/src/main/res/layout/activity_home.xml
+++ b/iziozi/src/main/res/layout/activity_home.xml
@@ -24,7 +24,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="it.smdevelopment.iziozi.gui.BoardActivity">
+    tools:context="it.smdevelopment.iziozi.gui.IOBoardActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
