--- a/iziozi/src/main/res/layout/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout/create_button_activity_layout.xml
@@ -27,6 +27,7 @@
     android:weightSum="1"
     android:orientation="vertical"
     android:focusableInTouchMode="true"
+    android:background="@android:color/white"
     android:focusable="true"
     android:onClick="doTapOnImage">
 
