--- a/iziozi/src/main/res/values/dimens.xml
+++ b/iziozi/src/main/res/values/dimens.xml
@@ -23,5 +23,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="image_search_size">150dp</dimen>
+    <dimen name="image_search_width">150dp</dimen>
+    <dimen name="image_search_height">150dp</dimen>
+    <dimen name="cell_search_width">150dp</dimen>
+    <dimen name="cell_search_height">200dp</dimen>
 </resources>
