--- a/iziozi/src/main/res/layout/image_grid_cell.xml
+++ b/iziozi/src/main/res/layout/image_grid_cell.xml
@@ -21,15 +21,42 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="@dimen/image_search_size"
-    android:layout_height="@dimen/image_search_size">
+    android:layout_width="@dimen/cell_search_width"
+    android:layout_height="@dimen/cell_search_height">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="@dimen/image_search_width"
+        android:layout_height="@dimen/image_search_height"
         android:id="@+id/ImageSearchCellImageView"
         android:layout_gravity="center"
         android:src="@drawable/btn_normal" />
-</LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Title"
+        android:id="@+id/ImageSearchCellTitleText"
+        android:layout_below="@+id/ImageSearchCellImageView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Category"
+        android:id="@+id/ImageSearchCellCategoryText"
+        android:layout_below="@+id/ImageSearchCellTitleText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp" />
+</RelativeLayout>
