package name refactoring

--- a/iziozi/src/main/res/menu/ioabout.xml
+++ b/iziozi/src/main/res/menu/ioabout.xml
@@ -20,11 +20,10 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="it.iziozi.iziozi.gui.IOLocalImageSearchActivity" >
+    tools:context="it.iziozi.iziozi.gui.IOAboutActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        app:showAsAction="never" />
+        android:showAsAction="never" />
 </menu>
