--- a/iziozi/src/main/res/layout-sw600dp/activity_about.xml
+++ b/iziozi/src/main/res/layout-sw600dp/activity_about.xml
@@ -31,19 +31,6 @@
     android:clickable="false"
     android:background="@android:color/white">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/app_description"
-        android:id="@+id/textView"
-        android:gravity="center_horizontal"
-        android:textSize="12sp"
-        android:layout_marginTop="44dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="60dp"
@@ -111,11 +98,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:id="@+id/linearLayout">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:id="@+id/imageView"
             android:src="@drawable/logo_512"
             android:layout_alignParentTop="true"
@@ -124,16 +112,6 @@
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp" />
 
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/imageView3"
-            android:src="@drawable/minibit"
-            android:layout_alignParentTop="true"
-            android:layout_alignRight="@+id/imageButton2"
-            android:layout_alignEnd="@+id/imageButton2"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="4dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -151,7 +129,7 @@
             android:id="@+id/button"
             android:background="@null"
             android:onClick="openWebsite"
-            android:textSize="12dp"
+            android:textSize="16dp"
             android:textStyle="bold"
             android:layout_alignTop="@+id/button2"
             android:layout_alignLeft="@+id/imageButton2"
@@ -164,12 +142,24 @@
             android:id="@+id/button2"
             android:background="@null"
             android:onClick="sendMail"
-            android:textSize="12dp"
+            android:textSize="16dp"
             android:textStyle="bold"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/button"
             android:layout_toEndOf="@+id/button"
             android:layout_marginLeft="8dp" />
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/app_description"
+        android:id="@+id/textView"
+        android:gravity="center_horizontal"
+        android:textSize="15sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
