--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -49,6 +49,12 @@
         android:visible="true"></item>
 
     <item
+        android:id="@+id/action_about"
+        android:orderInCategory="4"
+        android:showAsAction="never"
+        android:title="@string/about" />
+
+    <item
         android:id="@+id/action_exit"
         android:orderInCategory="9999999"
         android:showAsAction="never"
