--- a/iziozi/src/main/res/layout/activity_smimages_search.xml
+++ b/iziozi/src/main/res/layout/activity_smimages_search.xml
@@ -34,11 +34,13 @@
         android:layout_height="match_parent"
         android:id="@+id/ImageSearchGridView"
         android:numColumns="auto_fit"
+        android:columnWidth="@dimen/cell_search_width"
         android:verticalSpacing="10dp"
         android:horizontalSpacing="10dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:layout_width="match_parent"
