--- a/iziozi/src/main/res/layout-sw600dp/activity_about.xml
+++ b/iziozi/src/main/res/layout-sw600dp/activity_about.xml
@@ -131,7 +131,7 @@
             android:onClick="openWebsite"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:layout_alignTop="@+id/button2"
+            android:layout_alignTop="@+id/CreateButtonSetImageButton"
             android:layout_alignLeft="@+id/imageButton2"
             android:layout_alignStart="@+id/imageButton2" />
 
@@ -139,7 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:text="info@iziozi.org"
-            android:id="@+id/button2"
+            android:id="@+id/CreateButtonSetImageButton"
             android:background="@null"
             android:onClick="sendMail"
             android:textSize="16dp"
