--- a/iziozi/src/main/res/drawable/scanmode_border_bg.xml
+++ b/iziozi/src/main/res/drawable/scanmode_border_bg.xml
@@ -21,11 +21,9 @@
   -->
 
 
-
-
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-android:shape="rectangle">
-<stroke
-    android:width="1dp"
-    android:color="@android:color/black" />
+    android:shape="rectangle">
+    <stroke
+        android:width="5dp"
+        android:color="@android:color/holo_red_light" />
 </shape>
