--- a/iziozi/src/main/res/layout-sw600dp/activity_about.xml
+++ b/iziozi/src/main/res/layout-sw600dp/activity_about.xml
@@ -34,7 +34,7 @@
     <ImageButton
         android:layout_width="150dp"
         android:layout_height="60dp"
-        android:id="@+id/imageButton2"
+        android:id="@+id/audiolistRecordButton"
         android:src="@drawable/donate"
         android:background="@null"
         android:scaleType="centerInside"
@@ -45,7 +45,7 @@
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/imageButton3"
+        android:id="@+id/audiolistDeleteButton"
         android:src="@drawable/fb_logo"
         android:background="@null"
         android:scaleType="centerInside"
@@ -57,7 +57,7 @@
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/imageButton"
+        android:id="@+id/audiolistPlayButton"
         android:src="@drawable/github_logo"
         android:background="@null"
         android:scaleType="centerInside"
@@ -74,9 +74,9 @@
         android:background="@null"
         android:scaleType="centerInside"
         android:onClick="openTw"
-        android:layout_toEndOf="@+id/imageButton3"
+        android:layout_toEndOf="@+id/audiolistDeleteButton"
         android:layout_alignParentBottom="true"
-        android:layout_toRightOf="@+id/imageButton3"
+        android:layout_toRightOf="@+id/audiolistDeleteButton"
         android:layout_marginLeft="8dp" />
 
     <ImageButton
@@ -88,8 +88,8 @@
         android:scaleType="centerInside"
         android:onClick="openGplus"
         android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/imageButton"
-        android:layout_toStartOf="@+id/imageButton"
+        android:layout_toLeftOf="@+id/audiolistPlayButton"
+        android:layout_toStartOf="@+id/audiolistPlayButton"
         android:layout_marginRight="8dp" />
 
     <LinearLayout
@@ -118,7 +118,7 @@
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
+        android:layout_below="@+id/audioListCreationTextView"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal">
 
@@ -132,8 +132,8 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:layout_alignTop="@+id/CreateButtonSetImageButton"
-            android:layout_alignLeft="@+id/imageButton2"
-            android:layout_alignStart="@+id/imageButton2" />
+            android:layout_alignLeft="@+id/audiolistRecordButton"
+            android:layout_alignStart="@+id/audiolistRecordButton" />
 
         <Button
             android:layout_width="wrap_content"
@@ -155,7 +155,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="@string/app_description"
-        android:id="@+id/textView"
+        android:id="@+id/audioListCreationTextView"
         android:gravity="center_horizontal"
         android:textSize="15sp"
         android:layout_centerVertical="true"
