--- a/iziozi/src/main/res/menu/create_button.xml
+++ b/iziozi/src/main/res/menu/create_button.xml
@@ -22,6 +22,11 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:id="@+id/manageMedias"
+        android:title="@string/manage_medias"
+        android:showAsAction="ifRoom"/>
+
     <item android:id="@+id/search"
         android:title="@android:string/search_go"
         android:icon="@android:drawable/ic_menu_search"
