--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -40,6 +40,18 @@
         android:title="@string/save" />
 
     <item
+        android:id="@+id/action_save_as"
+        android:orderInCategory="31"
+        android:showAsAction="never"
+        android:title="@string/save_as" />
+
+    <item
+        android:id="@+id/action_load"
+        android:orderInCategory="32"
+        android:showAsAction="never"
+        android:title="@string/load" />
+
+    <item
         android:id="@+id/scanMode"
         android:checkable="true"
         android:checked="false"
