--- a/iziozi/src/main/res/anim/button_grow_animation.xml
+++ b/iziozi/src/main/res/anim/button_grow_animation.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2014 Martino Lessio -
   ~ www.martinolessio.com
@@ -19,17 +21,15 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="image_search_width">150dp</dimen>
-    <dimen name="image_search_height">150dp</dimen>
-    <dimen name="cell_search_width">150dp</dimen>
-    <dimen name="cell_search_height">200dp</dimen>
-    <dimen name="navigation_bar_height">80dp</dimen>
-    <dimen name="navigation_bar_button_size">60dp</dimen>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true">
+    <scale
+        android:duration="200"
+        android:fromXScale="1"
+        android:fromYScale="1"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1.25"
+        android:toYScale="1.25" />
 
-
-
-</resources>
+</set>
