--- a/iziozi/src/main/res/layout-land/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout-land/create_button_activity_layout.xml
@@ -51,7 +51,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/border_bg"
-            android:id="@+id/linearLayout"
+            android:id="@+id/mainLayoutNavigationContainer"
             android:layout_below="@+id/create_preview_label"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -89,12 +89,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:id="@+id/relativeLayout2"
-            android:layout_toEndOf="@+id/linearLayout"
-            android:layout_alignTop="@+id/linearLayout"
-            android:layout_toRightOf="@+id/linearLayout"
+            android:layout_toEndOf="@+id/mainLayoutNavigationContainer"
+            android:layout_alignTop="@+id/mainLayoutNavigationContainer"
+            android:layout_toRightOf="@+id/mainLayoutNavigationContainer"
             android:paddingLeft="20dp"
             android:paddingRight="0dp"
-            android:layout_alignBottom="@+id/linearLayout">
+            android:layout_alignBottom="@+id/mainLayoutNavigationContainer">
 
             <EditText
                 android:id="@+id/CreateButtonTitleText"
@@ -146,7 +146,7 @@
             android:layout_height="40dp"
             android:gravity="center_horizontal"
             android:id="@+id/linearLayout2"
-            android:layout_alignBottom="@+id/linearLayout"
+            android:layout_alignBottom="@+id/mainLayoutNavigationContainer"
             android:layout_marginRight="10dp"
             android:layout_alignLeft="@+id/relativeLayout2"
             android:layout_alignStart="@+id/relativeLayout2">
