--- a/iziozi/src/main/res/layout-sw600dp/activity_about.xml
+++ b/iziozi/src/main/res/layout-sw600dp/activity_about.xml
@@ -99,7 +99,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
-        android:id="@+id/linearLayout">
+        android:id="@+id/mainLayoutNavigationContainer">
 
         <ImageView
             android:layout_width="100dp"
@@ -107,8 +107,8 @@
             android:id="@+id/imageView"
             android:src="@drawable/logo_512"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/button"
-            android:layout_toStartOf="@+id/button"
+            android:layout_toLeftOf="@+id/editModeAlertActionPicture"
+            android:layout_toStartOf="@+id/editModeAlertActionPicture"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp" />
 
@@ -126,7 +126,7 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:text="www.iziozi.org"
-            android:id="@+id/button"
+            android:id="@+id/editModeAlertActionPicture"
             android:background="@null"
             android:onClick="openWebsite"
             android:textSize="16dp"
@@ -145,8 +145,8 @@
             android:textSize="16dp"
             android:textStyle="bold"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/button"
-            android:layout_toEndOf="@+id/button"
+            android:layout_toRightOf="@+id/editModeAlertActionPicture"
+            android:layout_toEndOf="@+id/editModeAlertActionPicture"
             android:layout_marginLeft="8dp" />
     </LinearLayout>
 
