--- a/iziozi/src/main/res/layout/activity_board.xml
+++ b/iziozi/src/main/res/layout/activity_board.xml
@@ -19,17 +19,13 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="image_search_width">150dp</dimen>
-    <dimen name="image_search_height">150dp</dimen>
-    <dimen name="cell_search_width">150dp</dimen>
-    <dimen name="cell_search_height">200dp</dimen>
-    <dimen name="navigation_bar_height">80dp</dimen>
-    <dimen name="navigation_bar_button_size">60dp</dimen>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:id="@+id/boardActivityFragmentContainer"
+    tools:context="it.iziozi.iziozi.gui.IOBoardActivity">
 
 
-
-</resources>
+</FrameLayout>
