--- a/iziozi/src/main/res/layout/audiolist_cell.xml
+++ b/iziozi/src/main/res/layout/audiolist_cell.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/audiolistFileNameTextView"
         android:layout_toEndOf="@+id/imageView"
-        android:layout_toStartOf="@+id/linearLayout"
+        android:layout_toStartOf="@+id/mainLayoutNavigationContainer"
         android:text="Title"
         android:layout_alignParentTop="true"
         android:layout_alignRight="@+id/audioListCreationTextView"
@@ -61,7 +61,7 @@
         android:text="Date of creation"
         android:id="@+id/audioListCreationTextView"
         android:layout_toEndOf="@+id/imageView"
-        android:layout_toStartOf="@+id/linearLayout"
+        android:layout_toStartOf="@+id/mainLayoutNavigationContainer"
         android:layout_below="@+id/audiolistFileNameTextView"
         android:layout_toRightOf="@+id/imageView"
         android:layout_marginTop="10dp"
@@ -75,7 +75,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
-        android:id="@+id/linearLayout">
+        android:id="@+id/mainLayoutNavigationContainer">
 
 
         <IconButton
