--- a/iziozi/src/main/res/layout/boilerplate.xml
+++ b/iziozi/src/main/res/layout/boilerplate.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ Copyright (c) 2014 Martino Lessio -
   ~ www.martinolessio.com
@@ -19,17 +21,19 @@
   ~ If not, see http://www.gnu.org/licenses/.
   -->
 
-<resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="image_search_width">150dp</dimen>
-    <dimen name="image_search_height">150dp</dimen>
-    <dimen name="cell_search_width">150dp</dimen>
-    <dimen name="cell_search_height">200dp</dimen>
-    <dimen name="navigation_bar_height">80dp</dimen>
-    <dimen name="navigation_bar_button_size">60dp</dimen>
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"></LinearLayout>
 
-
-</resources>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="80dp"></LinearLayout>
+</LinearLayout>
