--- a/iziozi/src/main/res/layout/create_button_activity_layout.xml
+++ b/iziozi/src/main/res/layout/create_button_activity_layout.xml
@@ -59,7 +59,7 @@
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:background="@drawable/border_bg"
-            android:id="@+id/linearLayout"
+            android:id="@+id/mainLayoutNavigationContainer"
             android:layout_below="@+id/create_preview_label"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
