--- a/iziozi/src/main/res/layout/boilerplate.xml
+++ b/iziozi/src/main/res/layout/boilerplate.xml
@@ -30,10 +30,24 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"></LinearLayout>
+        android:layout_height="200dp"></LinearLayout>
 
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="80dp"></LinearLayout>
+        android:layout_height="80dp"
+        android:gravity="center">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button2" />
+    </LinearLayout>
 </LinearLayout>
