--- a/iziozi/src/main/res/menu/main.xml
+++ b/iziozi/src/main/res/menu/main.xml
@@ -34,6 +34,12 @@
         android:title="@string/settings" />
 
     <item
+        android:id="@+id/action_new"
+        android:orderInCategory="30"
+        android:showAsAction="never"
+        android:title="@string/new_board" />
+
+    <item
         android:id="@+id/action_save"
         android:orderInCategory="30"
         android:showAsAction="never"
